sample/experiments/legacy/apps/nginx/legacy/alfred-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: alfred
 namespace: default
 annotations:
   kubernetes.io/ingress.class: "nginx"
   ingress.kubernetes.io/ssl-redirect: "true"
   nginx.org/websocket-services: "wiggly-wombat-alfred"
spec:
 tls:
 - hosts:
   - "alfred.wu2.prague.office-int.com"
   secretName: wu2-tls-certificate
 rules:
 - host: "alfred.wu2.prague.office-int.com"
   http:
     paths:
     - path: /
       backend:
         serviceName: wiggly-wombat-alfred
         servicePort: 80
